added gmm and gmm.mrc files

--- a/doc/Tutorial.ipynb
+++ b/doc/Tutorial.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Integrating EM and Crosslinking data to localize two domains of RNA Polymerase II\n",
+    "### Integrating EM and Crosslinking data to localize five subunits of RNA Polymerase III\n",
     "\n",
     "Authors: Riccardo Pellarin, Max Bonomi, Charles Greenberg, Daniel Saltzberg, Ben Webb\n",
     "\n",
@@ -52,12 +52,10 @@
    "metadata": {},
    "source": [
     "We will illustrate the use of IMP.pmi by determining the localization of two\n",
-    "subunits of RNA Polymerase II, utilizing chemical cross-linking coupled with\n",
-    "mass spectrometry, negative-stain electron microscopy (EM), and x-ray\n",
-    "crystallography data of the subunits. We will try\n",
-    "to reconstruct the stalk of the complex, comprising of subunits Rpb4 and Rpb7,\n",
-    "hypothesizing that we know already the structure of the remaining 10-subunit\n",
-    "complex. The example can be easily generalized to any other set of subunits.\n",
+    "subunits of RNA Polymerase III. In the first part we will be utilizing chemical cross-linking coupled with\n",
+    "mass spectrometry (XLMS) combined with comparative models of all subunits. In the second part we will include also cryo-electron microscopy (cryoEM). We will try\n",
+    "to determine the architecture of the complex,\n",
+    "hypothesizing that we know the architecture of the core, and aiming to localize the position of C53, C37, C34, C82, and C31. The example can be easily generalized to any other set of subunits.\n",
     "\n",
     "IMP.pmi references\n",
     "\n",
@@ -114,7 +112,7 @@
     "\n",
     "[//]: # (To compile the Table of Content run `python tools/compile_toc.py Tutorial.ipynb` and paste the output here below)\n",
     "\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[ Background of RNA Polymerase II ](#3_Background_of_RNA_Polymerase_II)\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[ Background of RNA Polymerase III ](#3_Background_of_RNA_Polymerase_III)\n",
     "\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[ Integrative Modeling using IMP ](#4_Integrative_Modeling_using_IMP)\n",
     "\n",
@@ -124,7 +122,7 @@
     "\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[ Stage 1 - Gathering of data ](#Stage_1_2)\n",
     "\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[ Data for yeast RNA Polymerase II ](#Data_rnapolii_3)\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[ Data for yeast RNA Polymerase III ](#Data_rnapoliii_3)\n",
     "\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[ Stage 2 - Representation of subunits and translation of the data into spatial restraints ](#Stage_2_2)\n",
     "\n",
@@ -172,14 +170,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Background of RNA Polymerase II <a name=\"3_Background_of_RNA_Polymerase_II\"></a>\n",
+    "## Background of RNA Polymerase III <a name=\"3_Background_of_RNA_Polymerase_III\"></a>\n",
     "\n",
-    "[RNA Pol II](http://en.wikipedia.org/wiki/RNA_polymerase_II) is a eukaryotic complex that catalyzes DNA transcription into mRNA strands.  Eukaryotic RNA polymerase II contains 12 subunits, Rpb1 to Rpb12. The yeast RNA Pol II dissociates into a 10-subunit core and a Rpb4/Rpb7 heterodimer. Rpb4 and Rpb7 are conserved from yeast to humans, and form a stalk-like protrusion extending from the main body of the RNA Pol II complex.\n",
+    "[RNA Pol III](http://en.wikipedia.org/wiki/RNA_polymerase_III) is a eukaryotic complex that catalyzes DNA transcription into ribosomal 5S rRNA and tRNA.  Eukaryotic RNA polymerase III contains 17 subunits. The yeast RNA Pol III dissociates into core, stalk, heterodimer (C53/C37), and heterotrimer (C82/C34/C31).\n",
     "\n",
     "\n",
     "### Integrative Modeling using IMP <a name=\"4_Integrative_Modeling_using_IMP\"></a>\n",
     "\n",
-    "This example will use data from chemical cross linking, EM and x-ray crystallography to localize the two subunits of the RNA Polymerase II stalk (Rpb4, Rpb7) to a static core of the remaining ten subunits.  \n",
+    "This example will use data from chemical cross linking, EM and comparative models to localize the 5 subunits of the RNA Polymerase III heterodimer and heterotrimer, to a fixed core of the remaining 12 subunits.  \n",
     "\n",
     "<img src=\"files/images/rnapolii_integrative.png\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
     "\n",
@@ -192,7 +190,7 @@
     "\n",
     "* [Stage 1](#Stage_1_2)) Collect biophysical data that can be used as structural restraints and constraints\n",
     "  \n",
-    "* [Stage 2](#Stage_2_2)) Define representations for the RNA Poly II structural model and define each data point as a scoring function.\n",
+    "* [Stage 2](#Stage_2_2)) Define representations for the RNA Pol III structural model and define each data point as a scoring function.\n",
     "\n",
     "* [Stage 3](#Sampling_2)) Run a sampling protocol to find good scoring conformations.  \n",
     "\n",
@@ -221,37 +219,38 @@
     "\n",
     "In this stage, we find all available experimental data that we wish to utilize in structural modeling.  In theory, any method that provides information about absolute or relative structural information can be used.\n",
     "\n",
-    "### Data for yeast RNA Polymerase II <a name=\"Data_rnapolii_3\"></a>\n",
-    "The `rnapolii/data` folder in the tutorial input files contains the data included in this example:\n",
+    "### Data for yeast RNA Polymerase III <a name=\"Data_rnapoliii_3\"></a>\n",
+    "The `rnapoliii/data` folder in the tutorial input files contains the data included in this example:\n",
     "\n",
     "* Sequence information (FASTA files for each subunit)\n",
-    "* [Electron density maps](http://www.ebi.ac.uk/pdbe/entry/EMD-1883/visualization) (`.mrc`, `.txt` files)\n",
-    "* [High resolution structure from x-ray crystallography](http://www.rcsb.org/pdb/explore/explore.do?structureId=1WCM) (PDB file)\n",
-    "* Chemical crosslinking datasets (we use two data sets, one from [Al Burlingame's lab](http://www.mcponline.org/content/13/2/420.long), and another from [Juri Rappsilber's lab](http://emboj.embopress.org/content/29/4/717))\n",
+    "* [10 Angstrom Electron density map](https://www.ebi.ac.uk/pdbe/entry/emdb/EMD-1804) (`.mrc`, `.txt` files)\n",
+    "* [High resolution structure from comparative modeling against Pol II structure](http://www.rcsb.org/pdb/explore/explore.do?structureId=1WCM) (PDB file)\n",
+    "* Chemical crosslinking datasets (we use two data sets, the apo  and DNA bound complexes, both from [Ferber and Kosinski](https://www.ncbi.nlm.nih.gov/pubmed/27111507))\n",
     "\n",
     "\n",
     "**FASTA File**  \n",
     "Each residue included in modeling must be explicitly defined in the FASTA text file.  Each individual component (i.e., a protein chain) is identified by a string in the FASTA header line.  From `1WCM.fasta.txt`:\n",
     "\n",
-    "    >1WCM:A\n",
-    "    MVGQQYSSAPLRTVKEVQFGLFSPEEVRAISVAKIRFPETMDETQTRAKIGGLNDPRLGSIDRNLKCQTCQEGMNECPGH\n",
-    "    FGHIDLAKPVFHVGFIAKIKKVCECVCMHCGKLLLDEHNELMRQALAIKDSKKRFAAIWTLCKTKMVCETDVPSEDDPTQ  \n",
-    "    ...\n",
-    "    >1WCM:B\n",
-    "    MSDLANSEKYYDEDPYGFEDESAPITAEDSWAVISAFFREKGLVSQQLDSFNQFVDYTLQDIICEDSTLILEQLAQHTTE\n",
-    "    SDNISRKYEISFGKIYVTKPMVNESDGVTHALYPQEARLRNLTYSSGLFVDVKKRTYEAIDVPGRELKYELIAEESEDDS  \n",
-    "    ...\n",
+    "    >P20434\n",
+    "    MDQENERNISRLWRAFRTVKEMVKDRGYFITQEEVELPLEDFKAKYCDSMGRPQRKMMSF\n",
+    "    QANPTEESISKFPDMGSLWVEFCDEPSVGVKTMKTFVIHIQEKNFQTGIFVYQNNITPSA\n",
+    "    MKLVPSIPPATIETFNEAALVVNITHHELVPKHIRLSSDEKRELLKRYRLKESQLPRIQR\n",
+    "    ADPVALYLGLKRGEVVKIIRKSETSGRYASYRICM\n",
+    "    >P20435\n",
+    "    MSDYEEAFNDGNENFEDFDVEHFSDEETYEEKPQFKDGETTDANGKTIVTGGNGPEDFQQ\n",
+    "    HEQIRRKTLKEKAIPKDQRATTPYMTKYERARILGTRALQISMNAPVFVDLEGETDPLRI\n",
+    "    AMKELAEKKIPLVIRRYLPDGSFEDWSVEELIVDL\n",
     "\n",
-    "defines two chains with unique IDs of 1WCM:A and 1WCM:B respectively.  The entire complex is 12 chains and 4582 residues.\n",
+    "defines two chains with unique IDs of P20434 and P20435 respectively.  The entire complex is 17 chains and 6263 residues.\n",
     "\n",
     "**Electron Density Map**  \n",
-    "The electron density map of the entire RNA Poly II complex is at 20.9 Angstrom resolution.  The raw data file for this is stored in `emd_1883.map.mrc`.\n",
+    "The electron density map of the entire RNA Poly III complex is at 10 Angstrom resolution.  The raw data file for this is stored in `emd_1804_10A_2010.mrc`.\n",
     "\n",
     "<figure><img src=\"files/images/rnapolii_em_raw.png\" width=\"200px\" />\n",
-    "<figcaption>_Electron microscopy density map for yeast RNA Polymerase II_</figcaption></figure>\n",
+    "<figcaption>_Electron microscopy density map for yeast RNA Polymerase III_</figcaption></figure>\n",
     "\n",
     "**Electron Density as Gaussian Mixture Models**  \n",
-    "Gaussian mixture models (GMMs) are used to greatly speed up scoring by approximating the electron density of individual subunits and experimental EM maps.  A GMM has been created for the experimental density map, and is stored in `emd_1883.map.mrc.gmm.50.mrc`.  The weight, center, and covariance matrix of each Gaussian used to approximate the original EM density can be seen in the corresponding `.txt` file.  \n",
+    "Gaussian mixture models (GMMs) are used to greatly speed up scoring by approximating the electron density of individual subunits and experimental EM maps.  Several GMMs has been created for the experimental density map, with different numbers of gaussians, and are stored in the `emd_1883.map.mrc.gmm.50.mrc`.  The weight, center, and covariance matrix of each Gaussian used to approximate the original EM density can be seen in the corresponding `.txt` file.  \n",
     "\n",
     "<figure><img src=\"files/images/rnapolii_em_gmm_50.png\" width=\"200px\" />\n",
     "<figcaption>_The EM data represented as a 50 Gaussian mixture model_</figcaption></figure>\n",
@@ -14972,21 +14971,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
