--- a/doc/Tutorial.ipynb
+++ b/doc/Tutorial.ipynb
@@ -250,27 +250,20 @@
     "<figcaption>_Electron microscopy density map for yeast RNA Polymerase III_</figcaption></figure>\n",
     "\n",
     "**Electron Density as Gaussian Mixture Models**  \n",
-    "Gaussian mixture models (GMMs) are used to greatly speed up scoring by approximating the electron density of individual subunits and experimental EM maps.  Several GMMs has been created for the experimental density map, with different numbers of gaussians, and are stored in the `emd_1883.map.mrc.gmm.50.mrc`.  The weight, center, and covariance matrix of each Gaussian used to approximate the original EM density can be seen in the corresponding `.txt` file.  \n",
+    "Gaussian mixture models (GMMs) are used to greatly speed up scoring by approximating the electron density of individual subunits and experimental EM maps.  Several GMMs has been created for the experimental density map, with different numbers of gaussians, and are stored in the `*_gmm.mrc`.  The weight, center, and covariance matrix of each Gaussian used to approximate the original EM density can be seen in the corresponding `.txt` file.  \n",
     "\n",
     "<figure><img src=\"files/images/rnapolii_em_gmm_50.png\" width=\"200px\" />\n",
     "<figcaption>_The EM data represented as a 50 Gaussian mixture model_</figcaption></figure>\n",
     "\n",
     "\n",
     "**PDB File**  \n",
-    "High resolution coordinates for all 12 chains of RNA Pol II are found in `1WCM.pdb`.  \n",
+    "High resolution coordinates for all 17 chains of RNA Pol III are found in `.pdb` files.  \n",
     "\n",
     "<figure><img src=\"files/images/rnapolii_all_1wc4.png\" width=\"200px\" />\n",
     "<figcaption>_Coordinates from PDBID [1WCM](http://www.rcsb.org/pdb/explore.do?structureId=1wcm)_</figcaption></figure>\n",
     "\n",
     "**Chemical Cross-Links**  \n",
-    "All chemical cross-linking data is located in `polii_xlinks.csv` and `polii_juri.csv`.  These files contain multiple comma-separated columns; four of these specify the protein and residue number for each of the two linker residues.\n",
-    "\n",
-    "    prot1,res1,prot2,res2\n",
-    "    Rpb1,34,Rpb1,49\n",
-    "    Rpb1,101,Rpb1,143\n",
-    "    Rpb1,101,Rpb1,176\n",
-    "\n",
-    "The length of the DSS/BS3 cross-linker reagent, 21 angstroms, will be specified later in the modeling script.  "
+    "All chemical cross-linking data is located in `FerberKosinski2016_apo.csv` and `FerberKosinski2016_apo.csv`.  These files contain multiple comma-separated columns; four of these specify the protein and residue number for each of the two linker residues. The length of the DSS/BS3 cross-linker reagent, 21 angstroms, will be specified later in the modeling script.  "
    ]
   },
   {
@@ -281,14 +274,14 @@
     "\n",
     "\n",
     "In this stage, we will initially define a representation of the system. Afterwards, we will convert the data into spatial restraints.  This is performed using the script `modeling/modeling.py` and uses the\n",
-    "topology file, `topology.txt`, to define the system components and their representation\n",
+    "topology file, `topology_poliii.txt` and `topology_poliii.txt`, to define the system components and their representation\n",
     "parameters.\n",
     "\n",
     "### Setting up Model Representation and Degrees of Freedom in IMP <a name=\"Setting_up_3\"></a>\n",
     "\n",
     "Very generally, the *representation* of a system is defined by all the variables that need to be determined based on input information, including the assignment of the system components to geometric objects (e.g. points, spheres, ellipsoids, and 3D Gaussian density functions). \n",
     "\n",
-    "Our RNA Pol II representation employs **spherical beads** of varying sizes and **3D Gaussians**, which coarsen domains of the complex using several resolution scales simultaneously. \n",
+    "Our RNA Pol II representation employs **spherical beads** of varying sizes and **3D Gaussians**, which coarsen domains of the complex using several resolution scales simultaneously. Here below we show the representation for the Pol II case, but the same applies to Pol III.\n",
     "\n",
     "<figure><img src=\"files/images/rnapolii_Multi-scale_representation.png\" width=\"600px\" />\n",
     "<figcaption>_Multi-scale representation of Rpb1 subunit of RNA Pol II_</figcaption></figure>\n",
@@ -298,7 +291,7 @@
     "Beads and Gaussians of a given domain are arranged into either a rigid body or a flexible string, based on the crystallographic structures. \n",
     "\n",
     "The GMM of a subunit is the set of all 3D Gaussians used to represent it; it will be used to calculate the EM score. The calculation of the GMM of a subunit can be done automatically in the **topology file**.\n",
-    "For the purposes of this tutorial, we already created these for Rpb4 and Rpb7 and placed them in the `rnapolii/data` directory in their respective `.mrc` and `.txt` files. \n",
+    "For the purposes of this tutorial, we already created these for all subunits and placed them in the `rnapoliii/data` directory in their respective `.mrc` and `.txt` files (eg, `ABC14.5.0.txt`). \n",
     "\n",
     "In a **rigid body**, all the beads and the Gaussians of a given domain have their relative distances constrained during configurational sampling, while in a **flexible string** the beads and the Gaussians are restrained by the sequence connectivity. \n",
     "\n",
@@ -374,7 +367,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then setup the relevant paths of the input files"
+    "Then setup the relevant paths of the input files. There hare two options. Either we use only the crosslinks, or we use the crosslinks with the cryoEM data. This option is encoded in the following variable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cryoEM=False"
    ]
   },
   {
@@ -383,10 +385,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#crosslink data\n",
+    "\n",
     "datadirectory = \"../rnapoliii/data/\"\n",
-    "topology_file = datadirectory+\"topology_poliii.txt\" \n",
-    "target_gmm_file = datadirectory+'emd_1883.map.mrc.gmm.50.txt' # The EM map data\n",
-    "output_directory = \"./output\""
+    "output_directory = \"./output\"\n",
+    "\n",
+    "if not cryoEM:\n",
+    "    topology_file = datadirectory+\"topology_poliii.txt\" \n",
+    "else:\n",
+    "    topology_file = datadirectory+\"topology_poliii_cryoem.txt\" "
    ]
   },
   {
@@ -1179,41 +1186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since we're interested in modelling the stalk, we will fix all subunits except Rpb4 and Rpb7. Note that we are using [IMP.atom.Selection](https://integrativemodeling.org/nightly/doc/ref/classIMP_1_1atom_1_1Selection.html) to get the particles that correspond to the fixed Molecules."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fixing 50 movers\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Fix all rigid bodies but not Rpb4 and Rpb7 (the stalk)\n",
-    "# First select and gather all particles to fix.\n",
-    "fixed_particles=[]\n",
-    "for prot in [\"ABC23\"]:\n",
-    "    fixed_particles+=IMP.atom.Selection(root_hier,molecule=prot).get_selected_particles()\n",
-    "    \n",
-    "\n",
-    "# Fix the Corresponding Rigid movers and Super Rigid Body movers using dof\n",
-    "# The flexible beads will still be flexible (fixed_beads is an empty list)!\n",
-    "fixed_beads,fixed_rbs=dof.disable_movers(fixed_particles,\n",
-    "                                         [IMP.core.RigidBodyMover,IMP.pmi.TransformMover])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Finally we randomize the initial configuration to remove any bias from the initial starting configuration read from input files. Since each subunit is composed of rigid bodies (i.e., beads constrained in a structure) and flexible beads, the configuration of the system is initialized by displacing each mobile rigid body and each bead randomly by 50 Angstroms, rotating them randomly, and moving them far enough from each other to prevent any steric clashes. \n",
+    "We randomize the initial configuration to remove any bias from the initial starting configuration read from input files. Since each subunit is composed of rigid bodies (i.e., beads constrained in a structure) and flexible beads, the configuration of the system is initialized by displacing each mobile rigid body and each bead randomly by 50 Angstroms, rotating them randomly, and moving them far enough from each other to prevent any steric clashes. \n",
     "\n",
     "The `excluded_rigid_bodies=fixed_rbs` will exclude from the randomization everything that was fixed above."
    ]
@@ -1235,7 +1208,6 @@
    "source": [
     "# Shuffle the rigid body and beads configuration of only the molecules we are interested in (Rpb4 and Rpb7)\n",
     "IMP.pmi.tools.shuffle_configuration(root_hier,\n",
-    "                                    excluded_rigid_bodies=fixed_rbs,\n",
     "                                    max_translation=50, \n",
     "                                    verbose=False,\n",
     "                                    cutoff=5.0,\n",
@@ -10393,15 +10365,17 @@
    "outputs": [],
    "source": [
     "# First, get the model density objects that will be fitted to the EM density.\n",
-    "em_components = IMP.pmi.tools.get_densities(root_hier)\n",
     "\n",
-    "gemt = IMP.pmi.restraints.em.GaussianEMRestraint(em_components,\n",
+    "if cryoEM:\n",
+    "    em_components = IMP.pmi.tools.get_densities(root_hier)\n",
+    "    \n",
+    "    gemt = IMP.pmi.restraints.em.GaussianEMRestraint(em_components,\n",
     "                                      target_gmm_file,  # EM map GMM file\n",
     "                                      scale_target_to_mass=True,  # True if the mass of the map and model are identical.\n",
     "                                      slope=0.0000001,  # A small funneling force pulling towards the center of the EM density.\n",
     "                                      weight=80.0)           \n",
-    "gemt.add_to_model()\n",
-    "outputobjects.append(gemt)"
+    "    gemt.add_to_model()\n",
+    "    outputobjects.append(gemt)"
    ]
   },
   {
