Add TOC, image size, link for replica exchange

--- a/rnapoliii/.template/Deposition.ipynb
+++ b/rnapoliii/.template/Deposition.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "%intersphinx https://python-ihm.readthedocs.io/en/latest\n",
-    "# Deposition of integrative models"
+    "# Deposition of integrative models {#mainpage}\n",
+    "[TOC]"
    ]
   },
   {
@@ -5485,7 +5486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can save time when it comes to the actual sampling by skipping it entirely (and using the previously-generated trajectory) by turning on ReplicaExchange0's `test_mode`:"
+    "We can save time when it comes to the actual sampling by skipping it entirely (and using the previously-generated trajectory) by turning on ``~IMP.pmi.macros.ReplicaExchange0``'s `test_mode`:"
    ]
   },
   {
@@ -5537,7 +5538,7 @@
     "\n",
     "As a further example of linkage, see the links in the previously-published [modeling of the Nup84 complex](https://salilab.org/nup84/) below. The mmCIF file links to the data directly used in the modeling (cross-links, crystal structures, electron microscopy class averages, comparative models, and Python scripts) via database IDs or DOIs. Furthermore, where available links are provided from this often-processed data back to the original data, such as templates for comparative models, mass spectometry spectra for cross-links, or micrographs for class averages:\n",
     "\n",
-    "![Nup84 file linkage](images/deposition/links.png)"
+    "<img src=\"images/links.png\" width=\"700px\" title=\"Nup84 file linkage\" />"
    ]
   },
   {
