--- a/rnapoliii/Deposition.ipynb
+++ b/rnapoliii/Deposition.ipynb
@@ -4,7 +4,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Deposition of integrative models"
+        "# Deposition of integrative models \n",
+        ""
       ]
     },
     {
@@ -75,7 +76,7 @@
       "source": [
         "from __future__ import print_function\n",
         "\n",
-        "# Imports need to use ProtocolOutput\n",
+        "# Imports needed to use ProtocolOutput\n",
         "import IMP.pmi.mmcif\n",
         "import ihm"
       ]
@@ -5484,7 +5485,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We can save time when it comes to the actual sampling by skipping it entirely (and using the previously-generated trajectory) by turning on ReplicaExchange0's `test_mode`:"
+        "We can save time when it comes to the actual sampling by skipping it entirely (and using the previously-generated trajectory) by turning on [ReplicaExchange0](https://integrativemodeling.org/2.11.1/doc/ref/classIMP_1_1pmi_1_1macros_1_1ReplicaExchange0.html)'s `test_mode`:"
       ]
     },
     {
@@ -5536,7 +5537,7 @@
         "\n",
         "As a further example of linkage, see the links in the previously-published [modeling of the Nup84 complex](https://salilab.org/nup84/) below. The mmCIF file links to the data directly used in the modeling (cross-links, crystal structures, electron microscopy class averages, comparative models, and Python scripts) via database IDs or DOIs. Furthermore, where available links are provided from this often-processed data back to the original data, such as templates for comparative models, mass spectometry spectra for cross-links, or micrographs for class averages:\n",
         "\n",
-        "![Nup84 file linkage](images/deposition/links.png)"
+        "<img src=\"images/links.png\" width=\"700px\" title=\"Nup84 file linkage\" />"
       ]
     },
     {
