Fix output of BCIF

--- a/rnapoliii/.template/Deposition.ipynb
+++ b/rnapoliii/.template/Deposition.ipynb
@@ -434,7 +434,7 @@
     "    ihm.dumper.write(fh, [s])\n",
     "\n",
     "#with open('rnapoliii.bcif', 'wb') as fh:\n",
-    "#    ihm.dumper.write(fh, [s])"
+    "#    ihm.dumper.write(fh, [s], format='BCIF')"
    ]
   },
   {
