--- a/rnapoliii/Deposition.ipynb
+++ b/rnapoliii/Deposition.ipynb
@@ -433,7 +433,7 @@
         "    ihm.dumper.write(fh, [s])\n",
         "\n",
         "#with open('rnapoliii.bcif', 'wb') as fh:\n",
-        "#    ihm.dumper.write(fh, [s])"
+        "#    ihm.dumper.write(fh, [s], format='BCIF')"
       ]
     },
     {
