Demonstrate interacting with ihm.System

--- a/rnapoliii/Deposition.ipynb
+++ b/rnapoliii/Deposition.ipynb
@@ -397,7 +397,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We can now query the [ihm.System](https://python-ihm.readthedocs.io/en/latest/main.html#ihm.System) object, stored as the `po.system` attribute:"
+        "Note that the [ihm.System](https://python-ihm.readthedocs.io/en/latest/main.html#ihm.System) object, stored as the `system` attribute of [ProtocolOutput](https://integrativemodeling.org/2.11.1/doc/ref/classIMP_1_1pmi_1_1mmcif_1_1ProtocolOutput.html), contains a full description of the system:"
       ]
     },
     {
@@ -407,33 +407,22 @@
       "outputs": [],
       "source": [
         "s = po.system\n",
-        "print(s)\n",
-        "print(s.restraints)\n",
-        "print(len(s.entities))\n",
-        "print(len(s.asym_units))\n",
+        "\n",
+        "# All subunits\n",
+        "print([a.details for a in s.asym_units])\n",
+        "\n",
+        "# Primary sequence of first subunit\n",
         "print(\"\".join(r.code for r in s.asym_units[0].entity.sequence))\n",
-        "print(s.restraints[0].dataset.location.path)"
+        "\n",
+        "# Restraints on the system\n",
+        "print(s.restraints)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We can then save the entire protocol to an mmCIF file (or to BinaryCIF, if we have the Python [msgpack](https://pypi.org/project/msgpack/) package installed):"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import ihm.dumper\n",
-        "with open('rnapoliii.cif', 'w') as fh:\n",
-        "    ihm.dumper.write(fh, [s])\n",
-        "\n",
-        "#with open('rnapoliii.bcif', 'wb') as fh:\n",
-        "#    ihm.dumper.write(fh, [s], format='BCIF')"
+        "Note that python-ihm only knows about two restraints, the crosslinking and the EM density restraint, not the connectivity or excluded volume. This is because PDB considers that all *valid* structures satisfy connectivity and excluded volume by definition."
       ]
     },
     {
@@ -442,16 +431,67 @@
       "source": [
         "# Linking to other data\n",
         "\n",
-        "Integrative modeling draws on data from a variety of sources, so for a complete deposition all of this data needs to be available. The data is not placed directly in the mmCIF file - rather, the file contains links. These links can be:\n",
+        "Integrative modeling draws on datasets from a variety of sources, so for a complete deposition all of this data needs to be available. python-ihm provides an [ihm.dataset](https://python-ihm.readthedocs.io/en/latest/dataset.html#module-ihm.dataset) module to describe various types of dataset, such as input experimental data, auxiliary output files (such as localization densities), or workflow files (such as Python scripts for modeling or visualization). For example, each restraint has an associated dataset:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print([r.dataset for r in s.restraints])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The data is not placed directly in the mmCIF file - rather, the file contains links (using the [ihm.location](https://python-ihm.readthedocs.io/en/latest/location.html#module-ihm.location) module). These links can be:\n",
         "\n",
         " - an identifier in a domain-specific database, such as PDB or EMDB.\n",
         " - a DOI where the files can be obtained.\n",
         " - a path to a file on the local disk.\n",
         "\n",
-        "Database identifiers are preferable because the databases are curated by domain experts and include domain-specific information, and the files are in standard formats. ProtocolOutput will attempt to use these where possible. For example, in this case ProtocolOutput is able to read (using the [ihm.metadata module](https://python-ihm.readthedocs.io/en/latest/metadata.html#module-ihm.metadata)) the annotations of the input crystal structure used for the modeling (see below) and determine that it is stored in the PDB, so the relevant 1WCM identitifer is included in the mmCIF file (see the `_ihm_dataset_related_db_reference` table). (Similarly, the EMDB EMD-1883 identifier is used for the EM density map.)\n",
+        "Database identifiers are preferable because the databases are curated by domain experts and include domain-specific information, and the files are in standard formats. ProtocolOutput will attempt to use these where possible. When a file is used for the modeling which cannot be tracked back to a database, ProtocolOutput will include its path (relative to that of the mmCIF file). For example, in this case the cross-links used are stored in simple CSV files and are linked as such:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Dataset for XL-MS restraint\n",
+        "d = s.restraints[0].dataset\n",
+        "print(d.location.path, d.location.details)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In addition, the Python script itself is linked from the mmCIF file. Such local paths won't be available to end users, so for deposition we need to replace these paths with database IDs or DOIs (see below).\n",
         "\n",
-        "When a file is used for the modeling which cannot be tracked back to a database, ProtocolOutput will include its path (relative to that of the mmCIF file). For example, in this case the cross-links used are stored in simple CSV files. In addition, the Python script itself is linked from the mmCIF file. Such local paths won't be available to end users, so for deposition we need to replace these paths with database IDs or DOIs (see below).\n",
-        "\n",
+        "Datasets all support a simple hierarchy, where one dataset can be derived from another. In this case the EM restraint uses a locally-available GMM file, but it is derived from a density map which is stored in EMDB. ProtocolOutput is able to read (using the [ihm.metadata module](https://python-ihm.readthedocs.io/en/latest/metadata.html#module-ihm.metadata)) metadata in both the GMM file and `.mrc` file to note this relationship:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Dataset for EM restraint\n",
+        "d = s.restraints[1].dataset\n",
+        "print(\"GMM file at\", d.location.path)\n",
+        "print(\"Derived from EMDB entry\", d.parents[0].location.access_code)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "As a further example of linkage, see the links in the previously-published [modeling of the Nup84 complex](https://salilab.org/nup84/) below. The mmCIF file links to the data directly used in the modeling (cross-links, crystal structures, electron microscopy class averages, comparative models, and Python scripts) via database IDs or DOIs. Furthermore, where available links are provided from this often-processed data back to the original data, such as templates for comparative models, mass spectometry spectra for cross-links, or micrographs for class averages:\n",
         "\n",
         "<img src=\"images/links.png\" width=\"700px\" title=\"Nup84 file linkage\" />"
@@ -476,7 +516,24 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "At the end of the modeling, we then simply write the entire study out to the mmCIF file by using ProtocolOutput's `flush` method:"
+        "# Polishing the deposition\n",
+        "\n",
+        "ProtocolOutput attempts to automatically generate as much as possible of the mmCIF file, but there are some areas where manual intervention is necessary because the data is missing, or its guess was incorrect. This data can be\n",
+        "corrected by manipulating the [ihm.System](https://python-ihm.readthedocs.io/en/latest/main.html#ihm.System) object directly. We will look at a few examples in this section."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Cross-linker type\n",
+        "\n",
+        "For cross-linking experiments, the mmCIF file contains a description of the cross-linking reagent used (e.g. the name of the chemical and the structure as a SMILES string). This information is not in the CSV file or the Python script. ProtocolOutput guesses the name of the reagent using the `label` passed to the PMI [CrossLinkingMassSpectrometryRestraint](https://integrativemodeling.org/2.11.1/doc/ref/classIMP_1_1pmi_1_1restraints_1_1crosslinking_1_1CrossLinkingMassSpectrometryRestraint.html),\n",
+        "as this label is often the name of the cross-linker. However, in this case it is not (we used the label `XL`).\n",
+        "\n",
+        "We can correct this by looking up [the publication](https://doi.org/10.1038/nmeth.3838) to determine\n",
+        "that the [DSS](https://en.wikipedia.org/wiki/Disuccinimidyl_suberate) cross-linker was used, and using the python-ihm\n",
+        "API to set the correct [cross-linker type](https://python-ihm.readthedocs.io/en/latest/cross_linkers.html#module-ihm.cross_linkers) for each [cross-linking restraint](https://python-ihm.readthedocs.io/en/latest/restraint.html#ihm.restraint.CrossLinkRestraint) in the [list of all restraints](https://python-ihm.readthedocs.io/en/latest/main.html#ihm.System.restraints):\n"
       ]
     },
     {
@@ -485,7 +542,69 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "po.flush()"
+        "# Definitions of some common crosslinkers\n",
+        "import ihm.cross_linkers\n",
+        "xl, = [r for r in s.restraints if hasattr(r, 'linker')]\n",
+        "xl.linker = ihm.cross_linkers.dss"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Correct number of output models\n",
+        "\n",
+        "ProtocolOutput captures information on the actual sampling, storing it in [ihm.protocol.Step](https://python-ihm.readthedocs.io/en/latest/protocol.html#ihm.protocol.Step) objects. Here it correctly notes that we ran Monte Carlo to generate 2 frames:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Get last step of last protocol (protocol is an 'orphan' because\n",
+        "# we haven't used it for a model yet)\n",
+        "last_step = s.orphan_protocols[-1].steps[-1]\n",
+        "print(last_step.num_models_end)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "However, in many modeling scenarios the modeling script is run multiple times on a compute cluster to generate several independent trajectories which are then combined. ProtocolOutput cannot know whether this happened. However, it is straightforward to use the python-ihm API to manually change the number of output models to match that reported in the publication:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Correct number of output models to account for multiple runs\n",
+        "last_step.num_models_end = 200000"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We can then save the entire protocol to an mmCIF file (or to [BinaryCIF](https://github.com/dsehnal/BinaryCIF), if we have the Python [msgpack](https://pypi.org/project/msgpack/) package installed) using the [ihm.dumper.write](https://python-ihm.readthedocs.io/en/latest/dumper.html#ihm.dumper.write) function:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import ihm.dumper\n",
+        "with open('rnapoliii.cif', 'w') as fh:\n",
+        "    ihm.dumper.write(fh, [s])\n",
+        "\n",
+        "#with open('rnapoliii.bcif', 'wb') as fh:\n",
+        "#    ihm.dumper.write(fh, [s], format='BCIF')"
       ]
     }
   ],
