Fix script to work with both 2.11.1 and latest git
If using 2.11.1, monkey-patch various PMI methods
to incorporate post-2.11 bug fixes and to add the
method to make crosslink classes. Also remove unused
imports, notably IMP.pmi.representation which doesn't
exist any more in latest git.

--- a/rnapoliii/.template/Deposition.ipynb
+++ b/rnapoliii/.template/Deposition.ipynb
@@ -101,8 +101,6 @@
     "import IMP.core\n",
     "import IMP.pmi.restraints.crosslinking\n",
     "import IMP.pmi.restraints.stereochemistry\n",
-    "import IMP.pmi.restraints.em\n",
-    "import IMP.pmi.representation\n",
     "import IMP.pmi.tools\n",
     "import IMP.pmi.samplers\n",
     "import RMF\n",
@@ -110,8 +108,8 @@
     "\n",
     "import IMP.pmi.macros\n",
     "import IMP.pmi.topology\n",
+    "import tutorial_util\n",
     "\n",
-    "import os\n",
     "import sys\n",
     "\n",
     "import warnings\n",
@@ -301,7 +299,7 @@
     "xl1.rename_proteins({\"ABC14.5\":\"ABC14_5\"})\n",
     "\n",
     "# Create 3 confidence classes\n",
-    "#xl1.classify_crosslinks_by_score(3)\n",
+    "xl1.classify_crosslinks_by_score(3)\n",
     "\n",
     "\n",
     "\n",
