--- a/rnapoliii/Deposition.ipynb
+++ b/rnapoliii/Deposition.ipynb
@@ -100,8 +100,6 @@
         "import IMP.core\n",
         "import IMP.pmi.restraints.crosslinking\n",
         "import IMP.pmi.restraints.stereochemistry\n",
-        "import IMP.pmi.restraints.em\n",
-        "import IMP.pmi.representation\n",
         "import IMP.pmi.tools\n",
         "import IMP.pmi.samplers\n",
         "import RMF\n",
@@ -109,8 +107,8 @@
         "\n",
         "import IMP.pmi.macros\n",
         "import IMP.pmi.topology\n",
+        "import tutorial_util\n",
         "\n",
-        "import os\n",
         "import sys\n",
         "\n",
         "import warnings\n",
@@ -300,7 +298,7 @@
         "xl1.rename_proteins({\"ABC14.5\":\"ABC14_5\"})\n",
         "\n",
         "# Create 3 confidence classes\n",
-        "#xl1.classify_crosslinks_by_score(3)\n",
+        "xl1.classify_crosslinks_by_score(3)\n",
         "\n",
         "\n",
         "\n",
